--- a/consign/consign_app/templates/track_driver.html
+++ b/consign/consign_app/templates/track_driver.html
@@ -101,7 +101,7 @@
     </script>
 
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeBgx9JJAK5Zl_HyvFl7_pAXNqU-bYe_U&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=your_api&callback=initMap">
     </script>
 
 <div class="no-print">
